ultime week1-day3

--- a/week1-day3.html
+++ b/week1-day3.html
@@ -25,12 +25,12 @@
         </p>
       </section>
 
-      <img src="focaccia.png" alt="focaccia" />
+      <img class="ricetta" src="focaccia.png" alt="focaccia" />
       <figcaption>Imagine: Sally Wegas</figcaption>
       <div>
         <table>
           <tr>
-            <td><p id="feat">FEATURED IN:</p></td>
+            <td class="sinistra"><p id="feat">FEATURED IN:</p></td>
           </tr>
         </table>
         <p><a href="">Fresh Cranberry Recipes That Go Beyond Sauce</a></p>
